--- a/components/navPages/HomePage.module.css
+++ b/components/navPages/HomePage.module.css
@@ -32,3 +32,22 @@
   line-height: 1.25;
   text-transform: none;
 }
+.homePageButton {
+  margin-top: 2.5rem;
+  text-align: center;
+}
+.homePageButton a {
+  border: 2px solid transparent;
+  background-color: #008081;
+  color: #f4ece7;
+  font-size: 1rem;
+  border-radius: 12px;
+  padding: 15px 40px;
+  max-width: 100%;
+}
+
+@media (max-width: 990px) {
+  .homePageButton a {
+    font-size: 0.85rem;
+  }
+}
