--- a/components/navPages/courses/Card/CoursesCard.module.css
+++ b/components/navPages/courses/Card/CoursesCard.module.css
@@ -127,12 +127,13 @@
 
   margin-top: 1rem;
 }
-
+/*-----------------------------------------*/
 @media (max-width: 1100px) {
   .main1A {
     background-position: 30%;
   }
 }
+/*-----------------------------------------*/
 
 @media (max-width: 1040px) {
   .main1A {
@@ -142,6 +143,7 @@
     font-size: 1rem;
   }
 }
+/*-----------------------------------------*/
 
 @media (max-width: 970px) {
   .main2Title h3 {
@@ -154,108 +156,56 @@
     margin-right: auto;
   }
 }
+/*-----------------------------------------*/
 
 @media (max-width: 900px) {
   .container {
     flex-basis: 80%;
   }
 }
+/*-----------------------------------------*/
 @media (max-width: 800px) {
   .container {
     flex-basis: 90%;
   }
 }
-@media (max-width: 700px) {
-  .container {
-    flex-basis: 95%;
-  }
-}
 
+/*-----------------------------------------*/
 @media (max-width: 600px) {
-  .container {
-    flex-basis: 97%;
-  }
-
-  .main2Title h3 {
-    font-size: 1.08rem;
-    line-height: 1.2;
-  }
-  .main2BEPrice span {
-    font-size: 1.2rem;
-    line-height: 1.6;
-  }
-  .access {
-    padding: 1px;
-    opacity: 0.8;
-  }
-  .access1 {
-    margin-bottom: 1px !important;
-    padding: 0px 3px;
-  }
-  .access1 span {
-    line-height: 0.7;
-    font-size: 9px;
-  }
-}
-@media (max-width: 510px) {
   .container {
     flex-basis: 98%;
   }
-
-  .main2Title h3 {
-    font-size: 0.9rem;
-    line-height: 1.1;
+  .main {
+    flex-direction: column;
   }
-  .main2BEPrice span {
-    font-size: 1.1rem;
-    line-height: 1.4;
+  .main1 {
+    flex-basis: 100%;
+    padding: 8px !important;
+  }
+  .main1A {
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-bottom: 56.25%;
+    background-repeat: no-repeat;
+
+    /*
+    display: inline-block;
+    overflow: hidden;
+    background-origin: border-box;
+    */
   }
 }
 
+/*-----------------------------------------*/
 @media (max-width: 435px) {
-  .container {
-    flex-basis: 99%;
-  }
-
   .main2Title h3 {
-    font-size: 0.8rem;
-    line-height: 1;
-    white-space: none;
+    font-size: 1.1rem;
+    line-height: 1.2;
   }
   .main2BEPrice span {
-    font-size: 0.8rem;
-    line-height: 1.7;
-  }
-  .main2BEnroll a {
-    font-size: 0.7rem;
-    padding: 4px 15px;
-  }
-  .main2BEPrice span {
-    font-size: 1.2rem;
-    line-height: 1.3;
-
-    margin-top: 0.7rem;
+    font-size: 1.7rem;
+    line-height: 1.65;
+    margin-top: 1rem;
   }
 }
-@media (max-width: 380px) {
-  .container {
-    flex-basis: 99%;
-  }
-
-  .main2Title h3 {
-    font-size: 0.6rem;
-    line-height: 0.7;
-  }
-  .main2BEPrice span {
-    font-size: 0.5rem;
-    line-height: 1.4;
-  }
-  .main2BEnroll a {
-    font-size: 0.5rem;
-    padding: 2px 10px;
-  }
-  .main2BEPrice span {
-    font-size: 1rem;
-    line-height: 1.1;
-  }
-}
+/*-----------------------------------------*/
