--- a/components/navPages/courses/Card/CoursesCard.module.css
+++ b/components/navPages/courses/Card/CoursesCard.module.css
@@ -194,6 +194,9 @@
     background-origin: border-box;
     */
   }
+  .main2BEPrice{
+    text-align: center;
+  }
 }
 
 /*-----------------------------------------*/
